working on 'Edit' assy option

--- a/frontend/src/app/components/assembly/assembly.component.html
+++ b/frontend/src/app/components/assembly/assembly.component.html
@@ -1,32 +1,45 @@
 <div class="container my-4">
-    <h1>Assembly Structure</h1>
-    <ng-container *ngIf="!selectedAssembly; else detailView">
-      <div class="card mb-4">
-        <div class="card-header">
-          <i class="fas fa-table me-1"></i>
-          Assembly Data Table
-        </div>
-        <div class="card-body">
-          <ag-grid-angular
-            class="ag-theme-alpine"
-            [rowData]="assemblies"
-            [columnDefs]="columnDefs"
-            [defaultColDef]="defaultColDef"
-            [pagination]="true"
-            [paginationPageSize]="gridOptions.paginationPageSize"
-            [paginationPageSizeSelector]="gridOptions.paginationPageSizeSelector"
-            (gridReady)="onGridReady($event)"
-            style="width: 100%; height: 400px;">
-          </ag-grid-angular>
-        </div>
+  <h1>Assembly Structure</h1>
+
+  <ng-container *ngIf="!selectedAssembly && !isEditing; else activeView">
+    <!-- Tabla principal -->
+    <div class="card mb-4">
+      <div class="card-header">
+        <i class="fas fa-table me-1"></i>
+        Assembly Data Table
       </div>
-    </ng-container>
-  
-    <ng-template #detailView>
+      <div class="card-body">
+        <ag-grid-angular
+          class="ag-theme-alpine"
+          [rowData]="assemblies"
+          [columnDefs]="columnDefs"
+          [defaultColDef]="defaultColDef"
+          [pagination]="true"
+          [paginationPageSize]="gridOptions.paginationPageSize"
+          [paginationPageSizeSelector]="gridOptions.paginationPageSizeSelector"
+          (gridReady)="onGridReady($event)"
+          style="width: 100%; height: 400px;">
+        </ag-grid-angular>
+      </div>
+    </div>
+  </ng-container>
+
+  <ng-template #activeView>
+    <ng-container *ngIf="selectedAssembly && !isEditing; else editForm">
+      <!-- Detalles del ensamblaje -->
       <app-assembly-tree [assemblyData]="selectedAssembly"></app-assembly-tree>
       <div class="card-footer">
         <button class="btn btn-secondary" (click)="returnToTable()">Back to Table</button>
       </div>
+    </ng-container>
+
+    <ng-template #editForm>
+      <!-- Formulario de edición -->
+      <app-edit-assembly-form
+        [assembly]="assemblyToEdit"
+        (onCancel)="cancelEdit()"
+        (onSave)="saveEdit()">
+      </app-edit-assembly-form>
     </ng-template>
-  </div>
-  
+  </ng-template>
+</div>
