--- a/frontend/src/app/components/assembly-tree/assembly-tree.component.html
+++ b/frontend/src/app/components/assembly-tree/assembly-tree.component.html
@@ -14,5 +14,13 @@
       [paginationPageSizeSelector]="gridOptions.paginationPageSizeSelector"
       style="width: 100%; height: 500px;">
     </ag-grid-angular>
+    
   </div>
 </div>
+
+<app-edit-assembly-form
+  *ngIf="isEditFormVisible"
+  [assembly]="selectedAssembly"
+  (onCancel)="closeEditForm()"
+  (onSave)="closeEditForm()">
+</app-edit-assembly-form>
